--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <div id="wrapper">
             <!--HEADER-->
             <header>
+                <div id="social">
+                    <a target="_blank" href="https://github.com/variored" class="social__link">Github</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/андрей-величкин-1191301a7/" class="social__link">LinkedIn</a>
+                    <a target="_blank" href="https://vk.com/variored" class="social__link">VK</a>
+                    <a target="_blank" href="https://www.instagram.com/variored_ip/" class="social__link">Instagram</a>
+                </div>
             </header>
             <!--MAIN-->
             <main>
