--- a/index.html
+++ b/index.html
@@ -22,7 +22,27 @@
             <!--MAIN-->
             <main>
                 <div id="main__grid">
-                    <div class="main__item main__item_left">asdas
+                    <div class="main__item main__item_left">
+                        <!--ITEM-->
+                        <div class="main__nav-item nav-item">
+                            <div class="nav-item__ico nav-item__ico_landing"></div>
+                            <div class="nav-item__text">Landing page</div>
+                        </div>
+                        <!--ITEM-->
+                        <div class="main__nav-item nav-item">
+                            <div class="nav-item__ico nav-item__ico_blog"></div>
+                            <div class="nav-item__text">Blog</div>
+                        </div>
+                        <!--ITEM-->
+                        <div class="main__nav-item nav-item">
+                            <div class="nav-item__ico nav-item__ico_shop"></div>
+                            <div class="nav-item__text">Online shop</div>
+                        </div>
+                        <!--ITEM-->
+                        <div class="main__nav-item nav-item">
+                            <div class="nav-item__ico nav-item__ico_android"></div>
+                            <div class="nav-item__text">Android app</div>
+                        </div>
                     </div>
                     <div class="main__item main__item_right">qwe</div>
                 </div>
