--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <!--MAIN-->
             <main>
                 <div id="main__grid">
+                    <!--NAV-->
                     <div class="main__item main__item_left">
                         <!--ITEM-->
                         <div class="main__nav-item nav-item">
@@ -44,7 +45,27 @@
                             <div class="nav-item__text">Android app</div>
                         </div>
                     </div>
-                    <div class="main__item main__item_right">qwe</div>
+                    <!--EXPLORER-->
+                    <div class="main__item main__item_right">
+                        <div class="product-frame">
+                            <!--LANDING-->
+                            <div class="product-frame__title">TITLE</div>
+                            <div class="product-frame__grid">
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_3" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_4" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_5" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_6" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_7" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_8" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
             <!--FOOTER-->
