add site groups

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     </div>
                     <!--EXPLORER-->
                     <div class="main__item main__item_right">
-                        <div class="product-frame">
-                            <!--LANDING-->
-                            <div class="product-frame__title">TITLE</div>
+                        <!--SITE GROUP-->
+                        <div id="product-frame__title_landing" class="product-frame">
+                            <div class="product-frame__title">Landing page</div>
                             <div class="product-frame__grid">
                                 <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
                                 <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
@@ -62,7 +62,57 @@
                                 <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
                                 <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
                                 <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-
+                            </div>
+                        </div>
+                        <!--SITE GROUP-->
+                        <div id="product-frame__title_blog" class="product-frame">
+                            <div class="product-frame__title">Blog</div>
+                            <div class="product-frame__grid">
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_3" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_4" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_5" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_6" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_7" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_8" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                            </div>
+                        </div>
+                        <!--SITE GROUP-->
+                        <div id="product-frame__title_sjop" class="product-frame">
+                            <div class="product-frame__title">Online shop</div>
+                            <div class="product-frame__grid">
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_3" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_4" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_5" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_6" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_7" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_8" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                            </div>
+                        </div>
+                        <!--SITE GROUP-->
+                        <div id="product-frame__title_Android" class="product-frame">
+                            <div class="product-frame__title">Android app</div>
+                            <div class="product-frame__grid">
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_3" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_4" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_5" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_6" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_7" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_8" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
                             </div>
                         </div>
                     </div>
