add site group slider

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial=scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="ico" href="#">
         <link rel="stylesheet" href="normolize.css">
         <link rel="stylesheet" href="style.css">
@@ -25,94 +25,54 @@
                     <!--NAV-->
                     <div class="main__item main__item_left">
                         <!--ITEM-->
-                        <div class="main__nav-item nav-item">
+                        <a id="button_landing" href="#"><div id="button_landing_bg" class="main__nav-item nav-item">
                             <div class="nav-item__ico nav-item__ico_landing"></div>
                             <div class="nav-item__text">Landing page</div>
-                        </div>
+                        </div></a>
                         <!--ITEM-->
-                        <div class="main__nav-item nav-item">
+                        <a id="button_blog" href="#"><div id="button_blog_bg" class="main__nav-item nav-item">
                             <div class="nav-item__ico nav-item__ico_blog"></div>
                             <div class="nav-item__text">Blog</div>
-                        </div>
+                        </div></a>
                         <!--ITEM-->
-                        <div class="main__nav-item nav-item">
+                        <a id="button_shop" href="#"><div id="button_shop_bg" class="main__nav-item nav-item">
                             <div class="nav-item__ico nav-item__ico_shop"></div>
                             <div class="nav-item__text">Online shop</div>
-                        </div>
+                        </div></a>
                         <!--ITEM-->
-                        <div class="main__nav-item nav-item">
+                        <a id="button_android" href="#"><div id="button_android_bg" class="main__nav-item nav-item">
                             <div class="nav-item__ico nav-item__ico_android"></div>
                             <div class="nav-item__text">Android app</div>
-                        </div>
+                        </div></a>
                     </div>
                     <!--EXPLORER-->
                     <div class="main__item main__item_right">
                         <!--SITE GROUP-->
                         <div id="product-frame__title_landing" class="product-frame">
                             <div class="product-frame__title">Landing page</div>
-                            <div class="product-frame__grid">
-                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_3" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_4" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_5" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_6" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_7" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_8" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                            <div id="product-frame__grid_landing" class="product-frame__grid">
+
                             </div>
                         </div>
                         <!--SITE GROUP-->
                         <div id="product-frame__title_blog" class="product-frame">
                             <div class="product-frame__title">Blog</div>
-                            <div class="product-frame__grid">
-                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_3" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_4" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_5" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_6" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_7" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_8" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                            <div id="product-frame__grid_blog"  class="product-frame__grid">
+
                             </div>
                         </div>
                         <!--SITE GROUP-->
-                        <div id="product-frame__title_sjop" class="product-frame">
+                        <div id="product-frame__title_shop" class="product-frame">
                             <div class="product-frame__title">Online shop</div>
-                            <div class="product-frame__grid">
-                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_3" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_4" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_5" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_6" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_7" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_8" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                            <div id="product-frame__grid_shop"  class="product-frame__grid">
+
                             </div>
                         </div>
                         <!--SITE GROUP-->
                         <div id="product-frame__title_Android" class="product-frame">
                             <div class="product-frame__title">Android app</div>
-                            <div class="product-frame__grid">
-                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_2" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_3" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_4" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_5" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_6" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_7" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_8" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_9" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_10" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
-                                <a id="landing_site_11" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                            <div id="product-frame__grid_app"  class="product-frame__grid">
+
                             </div>
                         </div>
                     </div>
@@ -124,4 +84,7 @@
             </footer>
         </div>
     </body>
+    <script type="text/javascript" src="ASSETS/JS/config.js"></script>
+    <script type="text/javascript" src="ASSETS/JS/slider.js"></script>
+    <script type="text/javascript" src="ASSETS/JS/site_generator.js"></script>
 </html>
