--- a/index.html
+++ b/index.html
@@ -72,6 +72,26 @@
                         <div id="product-frame__title_Android" class="product-frame">
                             <div class="product-frame__title">Android app</div>
                             <div id="product-frame__grid_app"  class="product-frame__grid">
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
+                                <a id="landing_site_1" href="#"><img class="site__preview" src="ASSETS/IMG/SITES/LANDING/landing_1.jpg"></a>
                                 
                             </div>
                         </div>
